# CasualOps

./: .dockerignore  .env.example  .gitignore  .mcp.json  ARCH.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  evaluator.py  pyproject.toml  requirements.txt  setup-claude-code.sh
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
app/src/: styles.css
app/src/hooks/: use-run-history.ts
scripts/: smoke_kafka_bus.sh
src/: agents.py  api.py  benchmarking.py  causal.py  causal_discovery.py  dataset_compiler.py  demo_fixtures.py  engine.py  estimators.py  evaluator.py  evidence_adapters.py  evolution.py  graph.py  graph_5d.py  graph_5d_stream.py  llm.py  main.py  paths.py  policy_learning.py  reasoning.py  schema.py
src/bus/: __init__.py  consumer.py  context.py  dlq.py  events.py  helpers.py  producer.py  publish.py  serde.py  summary.py  topics.py
src/coordinator/: __init__.py  barriers.py  refutation.py  runner.py  spawn.py  store.py
src/memory/: embedder.py  extractor.py  mcp_server.py  nodes.py  store.py
src/worker/: __init__.py  __main__.py  consumer.py  dispatch.py  graph_consumer.py  main.py  submit.py
tests/: conftest.py  test_5d_graph.py  test_5d_stream.py  test_api_async_run.py  test_api_contracts.py  test_benchmarking.py  test_bus_kafka_off.py  test_bus_kafka_system.py  test_bus_serde.py  test_bus_summary.py  test_causal_discovery.py  test_coordinator_refutation.py  test_coordinator_runner.py  test_coordinator_store.py  test_dataset_compiler.py  test_demo_fixtures.py  test_estimators.py  test_evidence_adapters.py  test_phase2d_hardening.py  test_policy_optimization.py  test_reasoning.py  test_worker_dispatch.py
tests/memory/: test_extractor.py  test_mcp_tools.py  test_nodes.py  test_store.py
(+71 files in other folders)
