[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causalops"
version = "0.2.0"
description = "Evidence-backed causal reasoning engine for cyber operations."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE.md" }
authors = [{ name = "Darsh Garg" }]
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "ruff==0.11.4",
]

[project.scripts]
causalops-worker = "worker.main:main"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = [
    "agents",
    "api",
    "benchmarking",
    "causal",
    "causal_discovery",
    "dataset_compiler",
    "demo_fixtures",
    "engine",
    "estimators",
    "evaluator",
    "evidence_adapters",
    "evolution",
    "graph",
    "graph_5d",
    "graph_5d_stream",
    "llm",
    "main",
    "paths",
    "policy_learning",
    "reasoning",
    "schema",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bus*", "coordinator*", "worker*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.pyright]
extraPaths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -p no:pytest_ethereum -p no:asyncio"
markers = [
    "kafka: integration tests that require a reachable KAFKA_BOOTSTRAP broker",
]
filterwarnings = [
    "ignore:The copy keyword is deprecated and will be removed in a future version.*",
    "ignore:Using `httpx` with `starlette.testclient` is deprecated.*",
]
